--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <!-- Structured Data -->
