refactor entire application name to agentsflowai code base docs etc

--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
     <meta name="color-scheme" content="light dark" />
     
     <!-- SEO Meta Tags -->
-    <title>PixelCraft - Digital Marketing Agency | Transform Your Business</title>
+    <title>AgentsFlowAI - Digital Marketing Agency | Transform Your Business</title>
     <meta name="description" content="Award-winning digital marketing agency helping businesses scale with SEO, social media, web design, and data-driven strategies. 300% average ROI guaranteed." />
     <meta name="keywords" content="digital marketing, SEO, social media marketing, web design, PPC, content marketing, marketing strategy, business growth" />
-    <meta name="author" content="PixelCraft Digital Marketing" />
+    <meta name="author" content="AgentsFlowAI Digital Marketing" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://pixelcraft.lovable.app" />
+    <link rel="canonical" href="https://agentsflowai.lovable.app" />
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="PixelCraft - Digital Marketing Agency | Transform Your Business" />
+    <meta property="og:title" content="AgentsFlowAI - Digital Marketing Agency | Transform Your Business" />
     <meta property="og:description" content="Award-winning digital marketing agency helping businesses scale with SEO, social media, web design, and data-driven strategies. 300% average ROI guaranteed." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pixelcraft.lovable.app" />
-    <meta property="og:image" content="https://pixelcraft.lovable.app/hero-marketing.jpg" />
+    <meta property="og:url" content="https://agentsflowai.lovable.app" />
+    <meta property="og:image" content="https://agentsflowai.lovable.app/hero-marketing.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:site_name" content="PixelCraft" />
+    <meta property="og:site_name" content="AgentsFlowAI" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="PixelCraft - Digital Marketing Agency | Transform Your Business" />
+    <meta name="twitter:title" content="AgentsFlowAI - Digital Marketing Agency | Transform Your Business" />
     <meta name="twitter:description" content="Award-winning digital marketing agency helping businesses scale with SEO, social media, web design, and data-driven strategies. 300% average ROI guaranteed." />
-    <meta name="twitter:image" content="https://pixelcraft.lovable.app/hero-marketing.jpg" />
-    <meta name="twitter:creator" content="@pixelcraft" />
-    <meta name="twitter:site" content="@pixelcraft" />
+    <meta name="twitter:image" content="https://agentsflowai.lovable.app/hero-marketing.jpg" />
+    <meta name="twitter:creator" content="@agentsflowai" />
+    <meta name="twitter:site" content="@agentsflowai" />
 
     <!-- Performance & SEO -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -49,9 +49,9 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "PixelCraft Digital Marketing",
-      "url": "https://pixelcraft.lovable.app",
-      "logo": "https://pixelcraft.lovable.app/logo.png",
+      "name": "AgentsFlowAI Digital Marketing",
+      "url": "https://agentsflowai.lovable.app",
+      "logo": "https://agentsflowai.lovable.app/logo.png",
       "description": "Award-winning digital marketing agency helping businesses scale with SEO, social media, web design, and data-driven strategies.",
       "address": {
         "@type": "PostalAddress",
@@ -63,9 +63,9 @@
         "contactType": "customer service"
       },
       "sameAs": [
-        "https://facebook.com/pixelcraft",
-        "https://twitter.com/pixelcraft",
-        "https://linkedin.com/company/pixelcraft"
+        "https://facebook.com/agentsflowai",
+        "https://twitter.com/agentsflowai",
+        "https://linkedin.com/company/agentsflowai"
       ],
       "foundingDate": "2020",
       "numberOfEmployees": "50-100",
