- Update canonical URL and Open Graph URLs to use new agentsflowai.cloud domain - Update logo to use apple-touch-icon.png from new domain - Update company schema with new address (UK/London) and employee count (1-50) - Update Twitter image URL to use new domain

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <meta name="author" content="AgentsFlowAI Digital Marketing" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://agentsflowai.lovable.app" />
+    <link rel="canonical" href="https://agentsflowai.cloud" />
 
     <!-- Open Graph Tags -->
     <meta
@@ -35,10 +35,10 @@
       content="Award-winning digital marketing agency helping businesses scale with SEO, social media, web design, and data-driven strategies. 300% average ROI guaranteed."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://agentsflowai.lovable.app" />
+    <meta property="og:url" content="https://agentsflowai.cloud" />
     <meta
       property="og:image"
-      content="https://agentsflowai.lovable.app/hero-marketing.jpg"
+      content="https://agentsflowai.cloud/hero-marketing.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -57,7 +57,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://agentsflowai.lovable.app/hero-marketing.jpg"
+      content="https://agentsflowai.cloud/apple-touch-icon.png"
     />
     <meta name="twitter:creator" content="@agentsflowai" />
     <meta name="twitter:site" content="@agentsflowai" />
@@ -81,12 +81,13 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "AgentsFlowAI Digital Marketing",
-        "url": "https://agentsflowai.lovable.app",
-        "logo": "https://agentsflowai.lovable.app/logo.png",
+        "url": "https://agentsflowai.cloud
+        "logo": "https://agentsflowai.cloud/apple-touch-icon.png",
         "description": "Award-winning digital marketing agency helping businesses scale with SEO, social media, web design, and data-driven strategies.",
         "address": {
           "@type": "PostalAddress",
-          "addressCountry": "US"
+          "addressCountry": "UK",
+          "addressLocality": "London
         },
         "contactPoint": {
           "@type": "ContactPoint",
@@ -99,7 +100,7 @@
           "https://linkedin.com/company/agentsflowai"
         ],
         "foundingDate": "2020",
-        "numberOfEmployees": "50-100",
+        "numberOfEmployees": "1 - 50",
         "knowsAbout": [
           "Digital Marketing",
           "SEO",
